--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,3 +1,4 @@
+<title>{=$title}</title>
 <meta charset="utf-8" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 <link href="https://fonts.googleapis.com" rel="preconnect" />
