feat: astro account page

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -121,11 +121,11 @@ const navItems = [
   }
 
   .btn-new-transaction {
-    background-color: #2a9d8f;
-    box-shadow: 0 0 20px rgba(42, 157, 143, 0.3);
+    background-color: #11d4c4;
+    box-shadow: 0 0 15px rgba(17, 212, 196, 0.3);
   }
 
   .btn-new-transaction:hover {
-    background-color: #238b7e;
+    background-color: #0fb9ab;
   }
 </style>
